<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>github.gmess</groupId>
  <artifactId>java-vertx</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>java-vertx</name>
  <url>http://maven.apache.org</url>
  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <main.class>github.gmess.App</main.class>
    <image.name>app</image.name>
    <stack.version>4.5.1</stack.version>
    <jackson.version>2.16.0</jackson.version>
    <netty.version>4.1.92.Final</netty.version>
    <netty.io_uring.version>0.0.21.Final</netty.io_uring.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-core</artifactId>
      <version>${stack.version}</version>
    </dependency>
    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-web</artifactId>
      <version>${stack.version}</version>
    </dependency>
    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-web-openapi</artifactId>
      <version>${stack.version}</version>
    </dependency>
    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-json-schema</artifactId>
      <version>${stack.version}</version>
    </dependency>
    <dependency>
      <groupId>com.github.ben-manes.caffeine</groupId>
      <artifactId>caffeine</artifactId>
      <version>3.1.3</version>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-transport-native-kqueue</artifactId>
      <version>${netty.version}</version>
      <classifier>osx-x86_64</classifier>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-transport-native-epoll</artifactId>
      <version>${netty.version}</version>
      <classifier>linux-x86_64</classifier>
    </dependency>

  </dependencies>
    <build>
        <plugins>
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>exec-maven-plugin</artifactId>
              <version>3.1.1</version>
              <executions>
                <execution>
                  <id>java</id>
                  <goals>
                    <goal>java</goal>
                  </goals>
                  <configuration>
                    <mainClass>github.gmess.App</mainClass>
                    <enablePreview>true</enablePreview>
                    <optimize>true</optimize>
                    <debug>false</debug>
                    <arguments>
                      <argument>--enable-preview</argument>
                      <argument>-Xms2G</argument>
                      <argument>-Xmx2G</argument>
                      <argument>-server</argument>
                      <argument>-XX:+UseNUMA</argument>
                      <argument>-XX:+UseParallelGC</argument>
                      <argument>-Dvertx.disableMetrics=true</argument>
                      <argument>-Dvertx.disableH2c=true</argument>
                      <argument>-Dvertx.disableWebsockets=true</argument>
                      <argument>-Dvertx.flashPolicyHandler=false</argument>
                      <argument>-Dvertx.threadChecks=false</argument>
                      <argument>-Dvertx.disableContextTimings=true</argument>
                      <argument>-Dvertx.disableTCCL=true</argument>
                      <argument>-Dvertx.disableHttpHeadersValidation=true</argument>
                      <argument>-Dio.netty.buffer.checkBounds=false</argument>
                      <argument>-Dio.netty.buffer.checkAccessible=false</argument>
                      <argument>-jar</argument>
                      <argument>target/java-vertx-1.0-SNAPSHOT-fat.jar</argument>
                      <argument>github.gmess.App</argument>
                  </arguments>
                  </configuration>
                </execution>
              </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <enablePreview>true</enablePreview>
                    <optimize>true</optimize>
                    <debug>false</debug>
                </configuration>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jar-plugin</artifactId>
              <version>3.3.0</version>
              <configuration>
                <archive>
                  <manifest>
                    <addClasspath>true</addClasspath>
                    <mainClass>${main.class}</mainClass>
                  </manifest>
                </archive>
              </configuration>
            </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
              <execution>
                <id>copy-resources</id>
                <phase>package</phase>
                <goals>
                  <goal>copy-resources</goal>
                </goals>
                <configuration>
                  <outputDirectory>${project.build.directory}/src/main/resources</outputDirectory>
                  <resources>
                    <resource>
                      <directory>${project.basedir}/src/main/resources</directory>
                    </resource>
                  </resources>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.5.1</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>shade</goal>
                </goals>
                <configuration>
                  <transformers>
                    <transformer
                            implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                      <manifestEntries>
                        <Main-Class>${main.class}</Main-Class>
                      </manifestEntries>
                    </transformer>
                    <transformer
                            implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                      <resource>META-INF/services/io.vertx.core.spi.VerticleFactory</resource>
                    </transformer>
                  </transformers>
                  <artifactSet>
                  </artifactSet>
                  <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
                </configuration>
              </execution>
            </executions>
          </plugin>

        </plugins>
    </build>

    <profiles>
      <profile>
        <id>Linux</id>
        <activation>
          <activeByDefault>false</activeByDefault>
          <os>
            <family>unix</family>
          </os>
        </activation>
        <dependencies>
          <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-io_uring-incubator</artifactId>
            <version>${stack.version}</version>
          </dependency>
          <dependency>
            <groupId>io.netty.incubator</groupId>
            <artifactId>netty-incubator-transport-native-io_uring</artifactId>
            <version>${netty.io_uring.version}</version>
            <classifier>linux-x86_64</classifier>
          </dependency>
        </dependencies>
      </profile>
    </profiles>

</project>
